--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -98,7 +98,7 @@ jobs:
               docker compose -f compose.yaml up --build -d;
               rm -rf ./secrets/;
               docker image prune -f;
-              docker cp u4i-prod-flask:/code/u4i/src/static ~/static;
+              docker exec u4i-prod-flask tar -cf - -C /code/u4i/src static | tar -xf -;
               ';
               sleep 30;
           
