--- a/.github/workflows/prod-build-and-deploy.yml
+++ b/.github/workflows/prod-build-and-deploy.yml
@@ -3,6 +3,7 @@ name: Build and Deploy Production Server
 
 # Remove push when ready for production
 on:
+    push:
     pull_request:
         branches:
             - main
