--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -15,12 +15,7 @@ services:
       - PRODUCTION=false
       - REDIS_URI=redis://redis:6379/0
       - FLASK_DEBUG=true
-      - BASE_EMAIL=u4i@urls4irl.app
       - DOCKER=true
-      - MAILJET_API_KEY=/run/secrets/MAILJET_API_KEY
-      - MAILJET_SECRET_KEY=/run/secrets/MAILJET_SECRET_KEY
-      - BASE_EMAIL=/run/secrets/BASE_EMAIL
-
     secrets:
       - MAILJET_API_KEY
       - MAILJET_SECRET_KEY
@@ -29,6 +24,9 @@ services:
     # Sleep for 5 seconds to allow postgres image to start if necessary
     command: >
       sh -c "
+      export MAILJET_API_KEY=$(cat /run/secrets/MAILJET_API_KEY) &&
+      export MAILJET_SECRET_KEY=$(cat /run/secrets/MAILJET_SECRET_KEY) &&
+      export BASE_EMAIL=$(cat /run/secrets/BASE_EMAIL) &&
       sleep 5 &&
       . /code/venv/bin/activate &&
       flask db upgrade &&
