--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -103,7 +103,7 @@ jobs:
               docker compose -f compose-dev.yaml up --force-recreate --build -d;
               rm -rf ./secrets;
               docker image prune -f;
-              docker cp u4i-dev-flask:/code/u4i/src/static ~/static;
+              docker exec u4i-dev-flask tar -cf - -C /code/u4i/src static | tar -xf - -C ~/static;
               ';
               sleep 30;
           
