Some fixes across URL tests. And activation of tags tests remotely as a requirement for PR

--- a/pytest.ini
+++ b/pytest.ini
@@ -15,3 +15,4 @@ markers =
 	utubs_ui: associated with utubs UI on home page
 	members_ui: associated with members UI on home page
 	urls_ui: associated with URL UI on home page
+	tags_ui: associated with tags UI on home page
