--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
           - [10, 'UI UTub Functional Tests']
           - [11, 'UI Member Functional Tests']
           - [12, 'UI UTub URL Functional Tests']
-          # - [13, 'UI UTub Tags Functional Tests']
+          - [13, 'UI UTub Tags Functional Tests']
 
     name: ${{ format('{0}', matrix.worker[1]) }}
 
