--- a/compose-local.yaml
+++ b/compose-local.yaml
@@ -26,6 +26,7 @@ services:
       - ./src:/code/u4i/src
       - ./tests:/code/u4i/tests
       - ./migrations:/code/u4i/migrations
+      - ./utils:/code/u4i/utils
 
     # Sleep for 10 seconds to allow postgres image to start if necessary
     command: >
