--- a/compose.yaml
+++ b/compose.yaml
@@ -13,7 +13,6 @@ services:
         condition: service_healthy
     environment:
       - PRODUCTION=true
-      - REDIS_URI=redis://redis:6379/0
       - FLASK_DEBUG=false
     secrets:
       - MAILJET_API_KEY
@@ -23,6 +22,7 @@ services:
       - POSTGRES_DB
       - POSTGRES_USER
       - POSTGRES_PASSWORD
+      - REDIS_PASSWORD
     command: >
       sh -c "
       export MAILJET_API_KEY=$(cat /run/secrets/MAILJET_API_KEY) &&
@@ -32,6 +32,7 @@ services:
       export POSTGRES_PASSWORD=$(cat /run/secrets/POSTGRES_PASSWORD) &&
       export SECRET_KEY=$(cat /run/secrets/SECRET_KEY) &&
       export BASE_EMAIL=$(cat /run/secrets/BASE_EMAIL) &&
+      export REDIS_PASSWORD=$(cat /run/secrets/REDIS_PASSWORD) &&
       . /code/venv/bin/activate &&
       flask db upgrade &&
       gunicorn --workers 4 --bind 0.0.0.0:5000 --access-logfile - --error-logfile - run:app
