--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -30,6 +30,7 @@ services:
       sleep 5 &&
       . /code/venv/bin/activate &&
       flask db upgrade &&
+      flask shorturls add &&
       gunicorn --workers 4 --bind 0.0.0.0:5000 --access-logfile - --error-logfile - run:app
       "
 
