--- a/compose-local.yaml
+++ b/compose-local.yaml
@@ -34,6 +34,7 @@ services:
       sleep 10 &&
       . /code/venv/bin/activate &&
       flask db upgrade &&
+      flask shorturls add &&
       flask run --host=0.0.0.0 --port=5000
       "
 
