--- a/compose.yaml
+++ b/compose.yaml
@@ -35,6 +35,7 @@ services:
       export REDIS_PASSWORD=$(cat /run/secrets/REDIS_PASSWORD) &&
       . /code/venv/bin/activate &&
       flask db upgrade &&
+      flask shorturls add &&
       gunicorn --workers 4 --bind 0.0.0.0:5000 --access-logfile - --error-logfile - run:app
       "
 
