--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ env:
   POSTGRES_PASSWORD: 'postgres'
   POSTGRES_DB: 'postgres'
   POSTGRES_TEST_DB: 'postgres'
-  REDIS_URI: 'redis://redis:6379'
+  REDIS_URI: 'redis://localhost:6379'
 
 jobs:
   Tests:
@@ -78,7 +78,7 @@ jobs:
     
       # Redis service configuration
       redis:
-        image: 'redis:alpine'
+        image: 'redis:6.2.16-alpine'
         ports:
           - 6379:6379
         options: >-
