--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,5 +121,6 @@ jobs:
           pip install -r requirements-test.txt;
 
       - name: Run tests
+        timeout-minutes: 10
         run: |
           python3.11 -m pytest 
