--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 addopts = -sv
 filterwarnings =
 	ignore::DeprecationWarning:flask_wtf.*:
+	ignore:'get_engine' is deprecated.*:DeprecationWarning:.*:
 markers =
 	tags: associated with utub tags
 	urls: associated with utub urls
