--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,13 @@
+cffi==1.17.1
 cfgv==3.4.0
+cryptography==44.0.1
 distlib==0.3.7
 filelock==3.12.4
 identify==2.5.29
 nodeenv==1.8.0
 platformdirs==3.9.1
 pre-commit==3.7.0
+pyopenssl==25.0.0
 PyYAML==6.0.1
 virtualenv==20.24.5
 -r requirements-test.txt
