--- a/.github/workflows/dev-build-and-deploy.yml
+++ b/.github/workflows/dev-build-and-deploy.yml
@@ -4,7 +4,7 @@ name: Build and Deploy Development Server
 on:
     pull_request:
         branches:
-            - dev
+            - main
         types:
             - closed
 
