--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,24 @@
 repos:
   - repo: https://github.com/psf/black-pre-commit-mirror    
-    rev: 24.4.0
+    rev: 25.1.0
     hooks:
     - id: black
       language_version: python3.11
 
   - repo: https://github.com/pycqa/flake8
-    rev: "7.0.0"
+    rev: "7.1.2"
     hooks:
     - id: flake8
       args: [--extend-ignore, E501]
       
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.1.0"
+    rev: "v4.0.0-alpha.8"
     hooks:
     - id: prettier
       types: [javascript]
 
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: "v9.1.1"
+    rev: "v9.21.0"
     hooks:
     - id: eslint
       args: [--no-config-lookup]
