--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,14 +103,14 @@ jobs:
         with:
           python-version: '3.11.9'
           cache: 'pip'
-          cache-dependency-path: '**/requirements-test.txt'
+          cache-dependency-path: '**/requirements/requirements-test.txt'
       
       - name: Setup caching
         uses: actions/cache@master
         id: cache
         with:
           path: ${{ env.pythonLocation }}/lib/python3.11/site-packages/*
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-test.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements/requirements-test.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
             ${{ runner.os }}-
@@ -118,7 +118,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python3.11 -m pip install --upgrade pip;
-          pip install -r requirements-test.txt;
+          pip install -r requirements/requirements-test.txt;
 
       - name: Run tests
         env:
