Fix a bunch of Dependabot warnings by upgrading dependencies

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ addopts = -sv
 filterwarnings =
 	ignore::DeprecationWarning:flask_wtf.*:
 	ignore:'get_engine' is deprecated.*:DeprecationWarning:.*:
+	ignore:The '__version__' attribute is deprecated.*:DeprecationWarning:flask\..*
 markers =
 	tags: associated with utub tags
 	urls: associated with utub urls
