--- a/requirements/requirements-prod.txt
+++ b/requirements/requirements-prod.txt
@@ -9,6 +9,7 @@ Deprecated==1.2.14
 dnspython==2.6.1
 email-validator==1.1.3
 Flask==2.3.2
+Flask-Assets==2.1.0
 Flask-Limiter==3.5.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
@@ -21,6 +22,7 @@ idna==3.7
 importlib-resources==5.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.6
+jsmin==3.0.1
 limits==3.7.0
 mailjet-rest==1.3.4
 Mako==1.2.4
@@ -44,6 +46,7 @@ SQLAlchemy==1.4.31
 typing_extensions==4.9.0
 url-normalize==1.4.3
 urllib3==1.26.19
+webassets==2.0
 Werkzeug==3.0.6
 wrapt==1.15.0
 WTForms==3.0.1
