--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -99,7 +99,21 @@ jobs:
               rm -rf ./secrets/;
               docker image prune -f;
               docker exec u4i-prod-flask tar -cf - -C /code/u4i/src static | tar -xf -;
-              docker cp u4i-prod-flask:/code/u4i/src/gen/logged_in.js /home/u4i/static;
+
+              echo "Waiting for bundled JS file to be built...";
+              for i in {1..30}; do
+                if docker exec u4i-prod-flask ls /code/u4i/src/gen/logged_in.js &> /dev/null; then
+                  echo "Bundled JS file built! Copying to host...";
+                  break
+                fi
+              echo "Waiting.... (attempt $i of 30)";
+              sleep 5;
+              done
+
+              docker exec u4i-prod-flask tar -cf - -C /code/u4i/src/gen logged_in.js | tar -xf - -C /home/u4i/static;
+
+              echo "Cleaning up docker login files..."
+              rm -f ~/.docker/config.json
               ';
               sleep 30;
           
