Fix dev deployment for bundled JS file

--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -105,14 +105,16 @@ jobs:
               docker image prune -f;
               MAX_RETRIES=30;
               RETRY_COUNT=0;
-              while [ $RETRY_COUNT -lt $MAX_RETRIES; do
+              while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
                 if docker exec u4i-dev-flask ls /code/u4i/logged_in.js &> /dev/null; then
+                  echo "Found bundled JS file!";
                   break
                 fi
                 RETRY_COUNT=$((RETRY_COUNT+1))
                 sleep 5
               done
               if [ $RETRY_COUNT -eq $MAX_RETRIES ]; then
+                echo "Could not find bundled JS file";
                 exit 1
               fi
               docker exec u4i-dev-flask tar -cf - -C /code/u4i/src/static . | tar -xf - -C ~/static;
