--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -99,7 +99,7 @@ jobs:
               rm -rf ./secrets/;
               docker image prune -f;
               docker exec u4i-prod-flask tar -cf - -C /code/u4i/src static | tar -xf -;
-              docker cp u4i-prod-flask:/code/u4i/src/gen/logged_in.js /home/u4i/static;
+              docker exec u4i-prod-flask tar -cf - -C /code/u4i/src/gen logged_in.js | tar -xf - -C /home/u4i/static;
               ';
               sleep 30;
           
