Add pytest tags for running tests in CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -18,3 +18,4 @@ markers =
 	members_ui: associated with members UI on home page
 	urls_ui: associated with URL UI on home page
 	tags_ui: associated with tags UI on home page
+	mobile_ui: associated with mobile UI
