Refactor for API scheme

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -sv
+addopts = -sv --durations=10
 filterwarnings =
 	ignore::DeprecationWarning:flask_wtf.*:
 	ignore:'get_engine' is deprecated.*:DeprecationWarning:.*:
