--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,8 @@ env:
   POSTGRES_PASSWORD: 'postgres'
   POSTGRES_DB: 'postgres'
   POSTGRES_TEST_DB: 'postgres'
-  REDIS_URI: 'redis://localhost:6379'
+  REDIS_URI: 'redis://localhost:6379/0'
+  TEST_REDIS_URI: 'redis://localhost:6379/1'
 
 jobs:
   Tests:
