--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -26,6 +26,8 @@ on:
         required: true
       PROD_DB_PASSWORD:
         required: true
+      PROD_LOG_DIRECTORY:
+        required: true
       REDIS_PASSWORD:
         required: true
       MAILJET_API_KEY:
@@ -83,7 +85,7 @@ jobs:
             run: |
               ssh -T -q -o StrictHostKeyChecking=no ${{ secrets.PROD_SSH_HOST }} '
               cd /home/u4i/;
-              docker logs --since=24h u4i-prod-flask > "${{ secrets.PROD_LOG_DIRECTORY }}log_$(date +%Y%m%d_%H%M%S).txt";
+              docker logs --since=24h u4i-prod-flask &> "${{ secrets.PROD_LOG_DIRECTORY }}log_$(date +%Y%m%d_%H%M%S).txt";
               echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin;
               docker compose -f compose.yaml pull;
               mkdir -p ./secrets/;
