Use ProxyFix for IP address in docker compose

--- a/docker/compose-dev.yaml
+++ b/docker/compose-dev.yaml
@@ -16,6 +16,7 @@ services:
       - REDIS_URI=redis://redis:6379/0
       - FLASK_DEBUG=true
       - DOCKER=true
+      - DEV_SERVER=true
     secrets:
       - MAILJET_API_KEY
       - MAILJET_SECRET_KEY
@@ -32,7 +33,7 @@ services:
       flask db upgrade &&
       flask shorturls add &&
       flask assets build &&
-      gunicorn --workers 4 --bind 0.0.0.0:5000 --access-logfile - --error-logfile - run:app
+      gunicorn --workers 4 --bind 0.0.0.0:5000 --forwarded-allow-ips="*" --proxy-allow-ips="*" --access-logfile - --error-logfile - run:app
       "
 
   db:
