--- a/.github/workflows/prod-build-and-deploy.yml
+++ b/.github/workflows/prod-build-and-deploy.yml
@@ -36,3 +36,4 @@ jobs:
             MAILJET_SECRET_KEY: ${{ secrets.MAILJET_SECRET_KEY_INF }}
             BASE_EMAIL: ${{ secrets.BASE_EMAIL_INF }}
             SECRET_KEY: ${{ secrets.PROD_SECRET_KEY }}
+            NOTIFICATION_URL: ${{ secrets.NOTIFICATION_URL_INF }}
