--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -38,6 +38,8 @@ on:
         required: true
       SECRET_KEY:
         required: true
+      NOTIFICATION_URL:
+        required: true
 
 jobs:
     ProdDeploy:
@@ -97,6 +99,7 @@ jobs:
               echo "${{ secrets.MAILJET_API_KEY }}" > ./secrets/MAILJET_API_KEY;
               echo "${{ secrets.MAILJET_SECRET_KEY }}" > ./secrets/MAILJET_SECRET_KEY;
               echo "${{ secrets.BASE_EMAIL }}" > ./secrets/BASE_EMAIL;
+              echo "${{ secrets.NOTIFICATION_URL }}" > ./secrets/NOTIFICATION_URL;
               echo "$(openssl rand 64 | base64 --wrap=0 | tr -d '+')" > ./secrets/SECRET_KEY;
               docker compose -f compose.yaml up --build -d;
               rm -rf ./secrets/;
