--- a/docker/DockerfileLocal
+++ b/docker/DockerfileLocal
@@ -7,6 +7,7 @@ ENV FLASK_APP=run
 ENV PYTHONUNBEFFERED=1
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 ENV PIP_NO_CACHE_DIR=1
+ENV LOG_DIR=/app/volume/logs
 
 # Use code as working directory
 WORKDIR /code/u4i
@@ -21,7 +22,10 @@ RUN set -ex \
 	&& apt-get upgrade -y \
 	&& apt-get autoremove -y \
 	&& apt-get clean -y \
-	&& rm -rf /var/lib/apt/lists/*
+	&& rm -rf /var/lib/apt/lists/* \
+	&& mkdir -p /app/volume/logs \
+	&& chmod -R 775 /app/volume/logs \
+	&& chown -R u4i-host:u4i-host-group /app/volume/logs
 
 # Copy files needed
 COPY run.py ./
@@ -40,7 +44,6 @@ RUN chmod -R 775 /code \
 	&& python3 -m venv /code/venv \
 	&& . /code/venv/bin/activate \
 	&& pip install -r requirements/requirements-dev.txt --no-cache-dir
-#&& echo '. /code/venv/bin/activate
 
 # For development, since the mounted volumes include the src/ folder, we need to set this for the bundled JS file
 RUN mkdir -p /code/u4i/src/gen \
