--- a/docker/compose-local.yaml
+++ b/docker/compose-local.yaml
@@ -31,6 +31,7 @@ services:
       - ./migrations:/code/u4i/migrations
       - ./migrations/versions:/code/u4i/migrations/versions
       - ./utils:/code/u4i/utils
+      - app_logs:/app/volume
 
     # Sleep for 10 seconds to allow postgres image to start if necessary
     command: >
@@ -39,6 +40,7 @@ services:
       . /code/venv/bin/activate &&
       flask db upgrade &&
       flask shorturls add &&
+      flask utils start-log &&
       echo 'Running on 127.0.0.1:8659!' &&
       flask run --host=0.0.0.0 --port=5000 --cert=adhoc
       "
@@ -57,6 +59,18 @@ services:
       - "4444:4444"
     volumes:
       - /dev/shm:/dev/shm
+
+  workflow:
+    container_name: u4i-local-workflow
+    build:
+      context: .
+      dockerfile: docker/Dockerfile_WorkflowLocal
+    depends_on:
+      - web
+    environment:
+      - PRODUCTION=false
+    volumes:
+      - app_logs:/app/volume
 
   db:
     image: postgres:16.3-bookworm
@@ -89,4 +103,5 @@ services:
 volumes:
   pgdata:
   redisdata:
+  app_logs:
 
